--- a/applications-linux/sneuron_lib/CMakeLists.txt
+++ b/applications-linux/sneuron_lib/CMakeLists.txt
@@ -12,7 +12,7 @@ project(sneuron)
 
 #Set Include directory
 SET(SN_INC_DIR ../../src/)
-SET(EIGEN_INC_DIR ../3rdparty/eigen3.0.1/)
+SET(EIGEN_INC_DIR ../../3rdparty/eigen3.0.1/)
 INCLUDE_DIRECTORIES(${SN_INC_DIR} ${EIGEN_INC_DIR})
 
 #Set all the sources required for the library
